[package]
name = "cml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
flate2 = "1.0.26"
reqwest = "0.11.17"
tar = "0.4.38"
tokio = { version = "1.28.0", features = ["full"] }
